# actions

./: .coderabbit.yaml  .editorconfig  .gitignore  .gitleaks.toml  .markdownlint.json  .markdownlint.yaml  .markdownlintignore  .mega-linter.yml  .pre-commit-config.yaml  .prettierignore  .prettierrc.yml  .shellspec  .shiftleft-config.yml  .yamlfmt.yml  .yamlignore  .yamllint.yml  CLAUDE.md  CONTRIBUTING.md  LICENSE.md  Makefile  README.md  SECURITY.md  TODO.md  generate_listing.cjs  package-lock.json  package.json  pyproject.toml  run.sh  sonar-project.properties  supressions.xml
.claude/: settings.json
.github/: CODEOWNERS  CODE_OF_CONDUCT.md  SECURITY.md  actionlint.yaml  copilot-instructions.md  renovate.json  tag-changelog-config.js
.serena/: project.yml
.sonarlint/: connectedMode.json
_tests/: README.md  run-tests.sh
_tools/: bump-major-version.sh  check-version-refs.sh  fix-local-action-refs.py  get-action-sha.sh  release-undo.sh  release.sh  shared.sh  update-action-refs.sh
_validation/: README.md  generate.py  kit.py  spec.py
action-versioning/: README.md  action.yml  rules.yml
ansible-lint/: README.md  action.yml
ansible-lint-fix/: README.md  action.yml  rules.yml  validate.py
biome-check/: README.md  action.yml  rules.yml
biome-fix/: README.md  action.yml  rules.yml
biome-lint/: README.md  action.yml  rules.yml  validate.py
codeql-analysis/: CustomValidator.py  README.md  action.yml  rules.yml  validate.py
common-cache/: CustomValidator.py  README.md  action.yml  rules.yml
common-file-check/: CustomValidator.py  README.md  action.yml  rules.yml
common-retry/: CustomValidator.py  README.md  action.yml  rules.yml
composite-ansible-lint-fix/: README.md  action.yml
composite-common-cache/: README.md  action.yml
composite-common-file-check/: README.md  action.yml
composite-csharp-build/: README.md  action.yml
composite-csharp-lint-check/: README.md  action.yml
composite-csharp-publish/: README.md  action.yml
composite-docker-build/: README.md  action.yml
composite-docker-publish-gh/: README.md  action.yml
composite-docker-publish-hub/: README.md  action.yml
composite-dotnet-version-detect/: README.md  action.yml
composite-github-release/: README.md  action.yml
composite-go-build/: README.md  action.yml
composite-go-lint-check/: README.md  action.yml
composite-go-version-detect/: README.md  action.yml
composite-node-setup/: README.md  action.yml
composite-npm-publish/: README.md  action.yml
composite-php-composer/: README.md  action.yml
composite-pre-commit/: README.md  action.yml
composite-python-lint-fix/: README.md  action.yml
composite-set-git-config/: README.md  action.yml
composite-terraform-lint-fix/: README.md  action.yml
compress-images/: CustomValidator.py  README.md  action.yml  rules.yml  validate.py
csharp-build/: README.md  action.yml  rules.yml  validate.py
csharp-lint-check/: README.md  action.yml  rules.yml  validate.py
csharp-publish/: README.md  action.yml  rules.yml  validate.py
docker-build/: CustomValidator.py  README.md  action.yml  rules.yml  validate.py
docker-publish/: CustomValidator.py  README.md  action.yml  rules.yml  validate.py
docker-publish-gh/: CustomValidator.py  README.md  action.yml  rules.yml
docker-publish-hub/: CustomValidator.py  README.md  action.yml  rules.yml
dotnet-version-detect/: README.md  action.yml  rules.yml
eslint-check/: CustomValidator.py  README.md  action.yml  rules.yml
eslint-fix/: README.md  action.yml  rules.yml
eslint-lint/: README.md  action.yml  rules.yml  validate.py
go-build/: README.md  (+3 more)
validate-inputs/: CustomValidator.py  README.md  action.yml  modular_validator.py  pyproject.toml  pyrightconfig.json  validator.py
validate-inputs/docs/: ACTION_MAINTAINER.md  API.md  DEVELOPER_GUIDE.md  README_ARCHITECTURE.md
validate-inputs/rules/: .gitattributes  README.md  ansible-lint-fix.yml  biome-check.yml  biome-fix.yml  common-cache.yml  common-file-check.yml  common-retry.yml  compress-images.yml  csharp-build.yml  csharp-lint-check.yml  csharp-publish.yml  docker-build.yml  docker-publish-gh.yml  docker-publish-hub.yml  docker-publish.yml  dotnet-version-detect.yml  eslint-check.yml  eslint-fix.yml  github-release.yml  go-build.yml  go-lint.yml  go-version-detect.yml  node-setup.yml  npm-publish.yml  php-composer.yml  php-laravel-phpunit.yml  php-tests.yml  php-version-detect.yml  pr-lint.yml  pre-commit.yml  prettier-check.yml  prettier-fix.yml  python-lint-fix.yml  python-version-detect-v2.yml  python-version-detect.yml  release-monthly.yml  set-git-config.yml  stale.yml  sync-labels.yml  (+3 more)
validate-inputs/scripts/: benchmark-validator.py  check-rules-not-manually-edited.sh  debug-validator.py  generate-tests.py  update-validators.py
validate-inputs/tests/: __init__.py  conftest.py  test_base.py  test_boolean.py  test_boolean_validator.py  test_codeql-analysis_custom.py  test_codeql.py  test_common-cache_custom.py  test_common-file-check_custom.py  test_common-retry_custom.py  test_compress-images_custom.py  test_convention_mapper.py  test_conventions.py  test_custom_validators.py  test_docker-build_custom.py  test_docker-publish-gh_custom.py  test_docker-publish-hub_custom.py  test_docker-publish_custom.py  test_docker.py  test_docker_validator.py  test_eslint-check_custom.py  test_file.py  test_file_validator.py  test_generate_tests.py  test_go-lint_custom.py  test_go-version-detect_custom.py  test_harness.py  test_integration.py  test_legacy_cli.py  test_modular_validator.py  test_network.py  test_network_validator.py  test_node-setup_custom.py  test_npm-publish_custom.py  test_numeric.py  test_numeric_validator.py  test_php-composer_custom.py  test_php-laravel-phpunit_custom.py  test_php-tests_custom.py  test_php-version-detect_custom.py  (+21 more)
validate-inputs/tests/fixtures/: __init__.py  version_test_data.py
validate-inputs/validators/: __init__.py  base.py  boolean.py  codeql.py  convention_mapper.py  conventions.py  docker.py  file.py  network.py  numeric.py  registry.py  security.py  token.py  version.py
(+339 files in other folders)
